<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="english">English</string>
    <string name="button1text">Walk List</string>
    <string name="button2text">Update Walk List</string>
    <string name="button3text">About</string><string name="next">Next</string>
    <string name="previous">Back</string>
    <string name="close">Exit</string>
    <string name="image_default">This is an image</string>
    <string name="next_img">Next</string>
    <string name="previous_img">Back</string>
    <string name="hide_img">Hide</string>
    <string name="main_no_items">No walks Available</string>
    <string name="updatemaplist">Update Walk List</string>
    <string name="load_button_string">Download Walks</string>
    <string name="start_walk">Start Walk</string>
    <string name="text_default">This is text</string>
    <string name="continue_walk">Continue Walk</string>
	<string name="end_of_walk">You have reached the end of the walk. Click OK to go back to the map.</string>
	<string name="information">Information</string>
	<string name="start_walk_again">Start walk again</string>
	<string name="next_empty">The next waypoint is empty. Click OK to go to the one after or cancel to go back to the map.</string>
	<string name="walk_list_top_text">Tap walk to load:</string>
		
</resources>