<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
	<LinearLayout 
	    	android:id="@+id/dial_imglayout"
	        android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	    <ImageView
	        android:contentDescription="@string/image_default"
	        android:id="@+id/dial_ImageView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
   		<LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
     		<Button
		        android:id="@+id/dial_img_prev"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/previous_img" />
     		<Button
		        android:id="@+id/dial_img_hide"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/hide_img" />
		    <Button
		        android:id="@+id/dial_img_next"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/next_img" />
	    </LinearLayout>
	    <LinearLayout 
		        android:orientation="horizontal"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" >
		    <Button
		        android:id="@+id/dial_prev"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/previous" />
		    <Button
		        android:id="@+id/dial_close"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/close" />
		    <Button
		        android:id="@+id/dial_next"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/next" />
		    </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:id="@+id/dial_ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dial_imglayout" >
	    <LinearLayout 
	        android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	    	<TextView
	            android:id="@+id/dial_desc"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />
	    </LinearLayout>
    </ScrollView>
</RelativeLayout>
